<resources>
    <string name="app_name">Соционический каталог</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="auth_state">Авторизован?</string>
    <string name="already_logged_in">Вы уже вошли</string>
    <string name="logging_in">Входим в систему…</string>
    <string name="about">О себе</string>
    <string name="login_success">Вы вошли в систему</string>
    <string name="login_error">Ошибка входа в систему</string>
    <string name="login_canceled">Вход отменён</string>
    <string name="logout_success">Вы вышли из системы</string>
    <string name="logout_error">Ошибка выхода</string>
    <string name="logout">Выйти</string>
    <string name="card_load_error">Ошибка загрузки карточки</string>
    <string name="card_load_canceled">Загрузка карточки отменена</string>
    <string name="opening_card">Открываю карточку</string>
    <string name="loading_cards_list">Получаю список карточек</string>
    <string name="image_placeholder">Заглушка для картинки</string>
    <string name="wrong_card_type">Неизвестный тип карточки</string>
    <string name="error_loading_image">Ошибка загрузки картинки</string>
    <string name="image_is_loaded">Картинка загружена</string>
    <string name="card_image">Картинка карточки</string>
    <string name="title">Заголовок</string>
    <string name="quote">Цитата</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="saving_cancel">Сохранение отменено</string>
    <string name="saving_error">Ошибка сохранения</string>
    <string name="saving_card">Сохраняю карточку</string>
    <string name="error_displaying_card">Ошибка отображения карточки</string>
    <string name="select_image">Выберите картинку</string>
    <string name="discard_image_button">Кнопка отказа от картинки</string>
    <string name="error_selecting_image">Ошибка выбора картинки</string>
    <string name="image_data_error">Ошибка данных картинки</string>
    <string name="wrong_mime_type">Неправильный тип картинки</string>
    <string name="image_upload_cancelled">Отправка картинки отменена</string>
    <string name="image_upload_error">Ошибка отправки картинки</string>
    <string name="CARD_SHOW_error_saving_card">Ошибка сохранения карточки</string>
    <string name="card_saving_cancelled">Сохранение карточки отменено</string>
    <string name="error_missing_image">Картинка отсутствует</string>
    <string name="add_card">Добавить карточку</string>
    <string name="text">Текст</string>
    <string name="image">Картинка</string>
    <string name="card_deleted_short">Карточка удалена</string>
    <string name="deleting_card">Удаляем карточку</string>
    <string name="CARD_SHOW_error_deleting_card">Ошибка удаления карточки</string>
    <string name="unknown_request_code">Неизвестный код операции</string>
    <string name="result_error">Ошибка операции</string>
    <string name="DIALOG_card_deletion">Удаление карточки</string>
    <string name="DIALOG_really_delete_card">Действительно удалить карточку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="error_updating_list">Ошибка обновления списка</string>
    <string name="card_update_cancelled">Обновление карточки отменено</string>
    <string name="card_update_success">Карточка обновлена</string>
    <string name="card_update_error">Ошибка обновления карточки</string>
    <string name="data_error">Ошибка данных</string>
    <string name="not_authorized">Требуется авторизация</string>
    <string name="error_loading_list">Ошибка загрузки списка</string>
    <string name="users">Пользователи</string>
    <string name="USER_SHOW_data_error">Ошибка данных</string>
    <string name="data_loading_data">Ошибка загрузки данных</string>
    <string name="error_loading_data">Ошибка загрузки данных</string>
    <string name="USER_EDIT_error_saving_user">Ошибка сохранения пользователя</string>
    <string name="saving_user">Сохранение пользователя</string>
    <string name="error_saving_user">Ошибка сохранения пользователя</string>
    <string name="user_saved">Пользователь сохранён</string>
    <string name="email">Адрес электронной почты</string>
    <string name="internal_error">Внутренняя ошибка</string>
    <string name="error_loading_tags">Ошибка получения меток</string>
    <string name="tags">Метки</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="refreshing_list">Обновление списка</string>
    <string name="add">Добавить</string>
    <string name="new_tag">Новая метка</string>
    <string name="tag_name">Имя метки</string>
    <string name="cards_count_with_tag">Число карточек с меткой</string>
    <string name="tag">Метка</string>
    <string name="error_loading_tag">Ошибка получения метки</string>
    <string name="CARD_EDIT_error_editing_card">Ошибка редактирования карточки</string>
    <string name="aquotes" translatable="false">«%1$s»</string>
    <string name="TAGS_LIST_tags_list">Список меток</string>
    <string name="TAG_SHOW_page_title">Метка «%1$s»</string>
    <string name="CARDS_LIST_page_title">Карточки</string>
    <string name="CARD_SHOW_page_title_long">Карточка «%1$s»</string>
    <string name="DIALOG_deleted_card_name">Удалить карточку «%1$s»</string>
    <string name="REGISTER_name">Псевдоним</string>
    <string name="REGISTER_email" translatable="false">E-mail</string>
    <string name="REGISTER_password">Пароль</string>
    <string name="REGISTER_password_confirmation">Повторите пароль</string>
    <string name="REGISTER_proceed">Зарегистрироваться</string>
    <string name="REGISTER_cancel">Отказаться</string>
    <string name="REGISTER_name_cannot_be_empty">Псевдоним не может быть пустым</string>
    <string name="MENU_login">Войти</string>
    <string name="MENU_logout">Выйти</string>
    <string name="LOGIN_page_title">Вход в программу</string>
    <string name="LOGIN_login_failed">Ошибка входа</string>
    <string name="LOGIN_login_success">Успешный вход</string>
    <string name="LOGIN_cancel">Отмена</string>
    <string name="LOGIN_logging_in">Входим в программу</string>
    <string name="LOGIN_login">Войти</string>
    <string name="AUTH_error_logging_out">Ошибка выхода</string>
    <string name="ERROR_creating_card">Ошибка создания карточки</string>
    <string name="INFO_card_created">Карточка создана</string>
    <string name="INFO_card_saved">Карточка сохранена</string>
    <string name="INFO_operation_cancelled">Действие отменено</string>
    <string name="ERROR_saving_card">Ошибка сохранения карточки</string>
    <string name="LOGIN_register">Зарегистрироваться</string>
    <string name="LOGIN_register_label">Впервые здесь?</string>
    <string name="USER_SHOW_simple_page_title">Профиль пользователя</string>
    <string name="CARD_EDIT_edit_denied">Редактирование запрещено</string>
    <string name="CARD_EDIT_editing_error">Ошибка редактирования</string>
    <string name="CARD_EDIT_error_saving_card">Ошибка сохранения карточки</string>
    <string name="CARD_EDIT_error_loading_card">Ошибка загрузки карточки</string>
    <string name="CARD_SHOW_error_displaying_card">Ошибка отображения карточки</string>
    <string name="CARD_EDIT_card_edition_title">Правка карточки</string>
    <string name="CARD_EDIT_error_displaying_card">Ошибка отображения карточки</string>
    <string name="CARD_EDIT_error_receiving_image">Ошибка выбора картинки</string>
    <string name="CARD_EDIT_error_recieving_data">Ошибка получения данных</string>
    <string name="CARD_EDIT_unsupported_data_type">Неподдерживаемый тип данных</string>
    <string name="CARD_EDIT_error_displaying_image">Ошибка изображения</string>
    <string name="CARD_EDIT_error_processing_data">Ошибка обработки данных</string>
    <string name="CARD_EDIT_unknown_error">Неизвестная ошибка</string>
    <string name="CARD_EDIT_described_object">Что добавляем?</string>
    <string name="CARD_EDIT_card_name">Название карточки</string>
    <string name="MENU_create_card">Создать карточку</string>
    <string name="CARD_EDIT_error_no_input_data">Отсутствуют данные</string>
    <string name="CARD_EDIT_error_unknown_action">Неизвестное действие</string>
    <string name="CARD_EDIT_error_creating_card">Ошибка создания карточки</string>
    <string name="CARD_EDIT_card_creation_title">Создание карточки</string>
    <string name="CARDS_LIST_tag_filter">Карточки с меткой «%1$s»</string>
    <string name="CARDS_LIST_tag_filter_close_button">Кнопка отключения фильтра по метке</string>
    <string name="COMMENT_user_avatar">Изображение пользователя</string>
    <string name="CARD_SHOW_add_comment">Комментировать</string>
    <string name="CARD_SHOW_send_comment_button">Кнопка отправки комментария</string>
    <string name="CARD_SHOW_error_displaying_comments">Ошибка отображения комментариев</string>
    <string name="CARD_SHOW_error_loading_comments">Ошибка загрузки комментариев</string>
    <string name="COMMENT_reply">Ответить</string>
    <string name="COMMENT_more_actions">Дополнительные действия с комментарием</string>
    <string name="CARDS_LIST_comments_count">Комментариев: %1$d</string>
    <string name="MENU_refresh">Обновить</string>
    <string name="MENU_share">Поделиться</string>
    <string name="COMMENT_comment_deletion">Удалить комментарий?</string>
    <string name="COMMENT_delete_error">Ошибка удаления комментария</string>
    <string name="COMMENT_error_saving_comment">Ошибка сохранения комментария</string>
    <string name="DIALOG_delete_card">Удалить карточку?</string>
    <string name="DIALOG_edit_comment">Изменение комментария</string>
    <string name="DIALOG_input_text">Введите текст</string>
    <string name="COMMENT_saved">Комментарий сохранён</string>
    <string name="COMMENT_added">Комментарий добавлен</string>
    <string name="DIALOG_MESSAGE_cannot_be_empty">Не может быть пустым</string>
    <string name="action_denied">Действие запрещено</string>
    <string name="DIALOG_delete_comment">Удалить комментарий?</string>
    <string name="COMMENT_delete_message_template" translatable="false">%1$s ...</string>
    <string name="CARDS_LIST_error_deleting_card">Ошибка удаления карточки</string>
    <string name="error_deleting_card_tags">Ошибка удаления меток карточки</string>
    <string name="CARD_EDIT_remove_this_video">Удалить это видео</string>
    <string name="CARD_EDIT_add_video">Добавить видео</string>
    <string name="MENU_view_mode_grid">Сеткой</string>
    <string name="MENU_view_mode_list">Списком</string>
    <string name="MENU_view_mode_feed">Лентой</string>
    <string name="RESET_PASSWORD_send">Сбросить пароль</string>
    <string name="RESET_PASSWORD_enter_registration_email_address">Введите адрес электронной почты, с которым вы зарегистрированы</string>
    <string name="RESET_PASSWORD_cancel">Передумать</string>
    <string name="RESET_PASSWORD2_user_tip">Придумайте новый пароль</string>
    <string name="RESET_PASSWORD2_set_password">Установить</string>
    <string name="RESET_PASSWORD2_password">Новый пароль</string>
    <string name="RESET_PASSWORD2_password_confirmation">Повтор пароля</string>
    <string name="MENU_search">Поиск</string>
    <string name="MENU_user_profile">Профиль пользователя</string>
    <string name="USER_CHANGE_PASSWORD_current_password">Текущий пароль</string>
    <string name="USER_CHANGE_PASSWORD_new_password">Новый пароль</string>
    <string name="USER_CHANGE_PASSWORD_new_password_confirmation">Подтверждение нового пароля</string>
    <string name="MENU_change_view_mode">Режим просмотра</string>
    <string name="CARDS_GRID_search_widget_hint">Искать карточку</string>
    <string name="TAG_EDIT_name_input_hint">Имя метки</string>
</resources>