<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionTags"
        android:icon="@drawable/ic_tags"
        android:title="@string/tags"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionUsers"
        android:icon="@drawable/ic_users"
        android:title="@string/users"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionCreateCard"
        android:icon="@drawable/ic_add"
        android:title="@string/add_card"
        app:showAsAction="always">

        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/actionCreateTextCard"
                android:icon="@drawable/ic_text"
                android:title="@string/text"
                app:showAsAction="never" />

            <item
                android:id="@+id/actionCreateImageCard"
                android:icon="@drawable/ic_image"
                android:title="@string/image"
                app:showAsAction="never" />

        </menu>

    </item>
    <item
        android:id="@+id/actionLogin"
        android:icon="@drawable/ic_login"
        android:title="@string/MENU_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/MENU_logout"
        app:showAsAction="never" />

</menu>