<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_view_mode"
        android:title="@string/MENU_change_view_mode"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/actionViewModeList"
                android:icon="@drawable/ic_view_mode_list"
                android:title="@string/MENU_view_mode_list"
                app:showAsAction="never" />

            <item
                android:id="@+id/actionViewModeFeed"
                android:icon="@drawable/ic_view_mode_feed"
                android:title="@string/MENU_view_mode_feed"
                app:showAsAction="never" />
            <item
                android:id="@+id/actionViewModeGrid"
                android:icon="@drawable/ic_view_mode_grid"
                android:title="@string/MENU_view_mode_grid"
                app:showAsAction="never" />

        </menu>

    </item>
</menu>