<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/progress_and_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET_PASSWORD2_user_tip"
        android:textAlignment="center"
        android:textColor="@color/info"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password1Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/RESET_PASSWORD2_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password2Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/RESET_PASSWORD2_password_confirmation"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/major_button_margin_top"
        android:text="@string/RESET_PASSWORD2_set_password"
        android:textSize="@dimen/major_button_font_size" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET_PASSWORD_cancel"
        android:textSize="@dimen/minor_button_font_size"
        android:layout_marginTop="@dimen/minor_button_margin_top" />

</LinearLayout>