<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/progress_and_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET_PASSWORD_enter_registration_email_address"
        android:textSize="18sp" android:textAlignment="center" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET_PASSWORD_send"
        android:textSize="@dimen/major_button_font_size"
        android:layout_marginTop="@dimen/major_button_margin_top"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET_PASSWORD_cancel"
        android:textSize="@dimen/minor_button_font_size"
        android:layout_marginTop="@dimen/subsequent_button_margin_top" />

</LinearLayout>