<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/progress_and_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CARD_EDIT_card_name"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/quoteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quote"
            android:inputType="textCapSentences|textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <EditText
            android:id="@+id/quoteSourceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CARD_EDIT_quote_source"
            android:inputType=""
            android:selectAllOnFocus="false"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/mediaThrobber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card_image"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imagePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/discardImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/discard_image_button"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/videoHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/videoPlayerHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/removeVideoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CARD_EDIT_remove_this_video"
                android:visibility="gone" />

            <Button
                android:id="@+id/addVideoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CARD_EDIT_add_video"
                android:visibility="gone" />
        </LinearLayout>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>