<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/currentPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/USER_CHANGE_PASSWORD_current_password"
        android:textSize="16sp"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/USER_CHANGE_PASSWORD_new_password"
        android:textSize="16sp"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPasswordConfirmationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/USER_CHANGE_PASSWORD_new_password_confirmation"
        android:textSize="16sp"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />

</LinearLayout>